projects/vb6parse/snapshots/parsers/cst/deftype_statements/deftype_lowercase_range.snap
---
source: projects/vb6parse/src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefStrKeyword
          text: DefStr
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: a
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: z
        - kind: Newline
          text: "\n"
