projects/vb6parse/snapshots/parsers/cst/deftype_statements/deftype_mixed_ranges_and_singles.snap
---
source: projects/vb6parse/src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefLngKeyword
          text: DefLng
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: A
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: C
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: E
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: G
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: Z
        - kind: Newline
          text: "\n"
